@@ -1,5 +1,6 @@
 v7.14.1
   - Fix "skipped" svg
+  - Fix commits ordering
 
 v7.14.0
   - Truncate commit messages after subject line in table
